--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -3,6 +3,6 @@ $primary-font: "Lato", sans-serif;
 $secondary-font: "Open Sans", sans-serif;
 
 // Colors
-$primary-color: black;
-$secondary-color: #343434;
+$primary-color: #1d1d1d;
+$secondary-color: #646464;
 $tertiary-color: #999;
