UX buff: button compomnent

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -6,3 +6,4 @@ $secondary-font: "Open Sans", sans-serif;
 $primary-color: #1d1d1d;
 $secondary-color: #646464;
 $tertiary-color: #999;
+$danger-color: #de4455;
